virt01/manual/media/picard-web-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picard-web-test
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: picard-web-test
  template:
    metadata:
      labels:
        app: picard-web-test
    spec:
      serviceAccountName: picard-web-test-sa
      securityContext:
        fsGroup: 3000
      containers:
        - name: picard-web
          image: aandree5/picard-web:full-v1.6.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - name: http
              containerPort: 5000
            - name: browser-int
              containerPort: 8000
          readinessProbe:
            exec:
              command:
                - /pw/healthcheck.sh
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - /pw/healthcheck.sh
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /picard-web
            - name: music
              mountPath: /music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: picard-web-test-pvc
        - name: music
          hostPath:
            type: Directory
            path: /mnt/ssd01/Music
