virt01/manual/media/picard-web-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picard-web-test-svc
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app: picard-web-test
